ux: fix styling for scm commit button for high contrast themes (#16905)
Fixes GH-16904

--- a/packages/scm/src/browser/style/index.css
+++ b/packages/scm/src/browser/style/index.css
@@ -183,7 +183,7 @@
   width: 100%;
   height: 28px;
   gap: 4px;
-  border: none;
+  border: 1px solid var(--theia-button-border);
   cursor: pointer;
 }
 
